# pynrc

./: .gitignore  .readthedocs.yaml  .rtd-environment.yaml  .rtd-environment.yml  .travis.yml  .travis.yml.bak  .travis_TBI.yml  AUTHORS.rst  CITATION.cff  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.md.old  README.rst  TODO.rst  __init__.py  install_fresh(old).txt  install_fresh.txt  install_new.txt  logging_utils.py  ngNRC.py  nghxrg.py  nrc_utils.py  obs_nircam.py  pynrc_core.py  readthedocs.yml  requirements_dev.txt  robust.py  setup.cfg  setup.py  speckle_noise.py  version.py
.github/: ISSUE_TEMPLATE.md
dev_utils/: MIRI_4QPM.ipynb  NIRCam_darks.ipynb  WFE_benchmarks.ipynb  WFE_benchmarks2.ipynb  WFE_coefficients.ipynb  WFE_extrapolation.ipynb  WFE_interp_NIRCam.ipynb  WFE_interp_NIRCam_coron.ipynb  WFE_interpolation_old.py  WebbPSF_OTE_LM.ipynb  contrast2_develop.ipynb  contrast_develop.ipynb  coron_coeff_resid_INPROGRESS.ipynb  cosmic_rays.ipynb  cosmic_rays.json  grism_coronagraphy.ipynb  off_axis_bar.ipynb  off_axis_psf.ipynb  test_contrast_cuves.ipynb  test_pysiaf.ipynb  test_surface_brightness.ipynb  weaklens_comparisons.ipynb  webbpsf_memory.ipynb  webbpsf_opd_drift.py
docs/: Makefile  api.rst  api_new.rst  change_log.rst  conf.py  index.rst  install_clean.rst  install_fresh.txt  installation.rst  jwst_install_notes.txt  license.rst  make.bat  requirements.txt  test.rst
docs copy/: api_new.rst  conf.py  index.rst  install_clean.rst  installation.rst  license.rst  requirements.txt
maths/: fast_poly.py  image_manip.py  (+1 more)
(+2845 files in other folders)
