[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.1
testpaths = "pynrc" "docs"
norecursedirs = "docs[\/]_build" "pynrc[\/]extern"
doctest_plus = enabled
addopts = --pyargs -p no:warnings

[ah_bootstrap]
auto_use = True

[metadata]
package_name = pynrc
description = Python ETC and Simulator for JWST NIRCam
author = Jarron Leisenring
author_email = jarronl@email.arizona.edu
license = MIT
url = https:/github.com/jarronl/pynrc
edit_on_github = False
github_project = JarronL/pynrc
install_requires = webbpsf,astropy,pysynphot,seaborn,numpy,scipy

[entry_points]